--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "razorpay":"^2.8.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.10",
